# HypergraphHoTT

./: .gitignore  README.md  _CoqProject  coq_compile_pipe.py  dune  dune-project  test_compile.v  test_python.v  test_simple.v
Applications/: Conjectures.v  ConsciousnessType.v  NaturalSystems.v  OrganizationHypergraph.v
CoreTheorems/: RewriteBeta.v  StructuralInvariant.v  StructureDetermines.v  TopologicalEquiv.v  UnivalenceCorrespond.v
DowkerComplex/: Dowker.v  Simplicial.v
Hypergraph/: FinHypergraph.v  IncidenceMatrix.v  RewriteSystem.v
PearlCurtain/: Functoriality.v  PearlCurtain.v
Verification/: Examples.v  GudhiInterface.md  verify_P_TY_I.py
docs/: ARCHITECTURE.md  DELIVERY.md  PRD.md  QA_REPORT.md  class-diagram.mermaid  sequence-diagram.mermaid
